docs: update documentation to reflect TypeScript controller
- README.md: fix quick start (bun install instead of pip), update directory structure
- CONTRIBUTING.md: replace Python setup with Bun + TypeScript instructions
- AGENTS.md: update module dependency graph to reflect TypeScript files
- CLAUDE.md: update project structure and key files references
- QUICK_START.md: remove incorrect ESLint reference (5 checks, not 6)
- pyproject.toml: add note explaining this is legacy from Python era
- config/requirements.txt: add Python deps for LiteLLM callback

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+# NOTE: This pyproject.toml is LEGACY from the Python-era controller.
+# The controller is now Bun + TypeScript (see controller/src/).
+# These Python dependencies are ONLY used for config/tool_call_handler.py
+# (LiteLLM callback). The vllm-studio CLI entry point below does NOT work.
+
 [project]
 name = "vllm-studio"
 version = "0.3.1"
